# v63

## New features

- Added a tools menu entry for formatting the SD card. Requires firmware 155 or higher.

# v62

## Fixed

- When multiple controllers are connected, any of them can control the menu.
- Controls are changed to be closer to the Saturn design language:
    - D-pad left and right are page up/down
    - B is cancel
    - A and C are select
- Add a completion message to AR erase function

With thanks to ShadowofBob for the control & erase patches!

# v61

## New features

- Support for CUE/BIN/WAV images, with many thanks to lifning for the patch!

# v60

## New features

- Reset to menu on A+B+C+Start. This requires an AR cart running patched firmware 3, and Satiator firmware version 154.

## Fixed

- Fixed AR Flash detection for AT29C010A Flash chips, which needed a delay
- When backing up an AR cart, length was calculated wrong, and only the first half backed up
- Revert to requesting a BIOS clock change on startup; this causes flicker, but is the easiest way to get everything neat and tidy on an A+B+C+Start reset

## Known issues

- The VDP menu workaround which fixes the Croc missing head bug (amongst others) will not work after an A+B+C+Start reset.

# v59

## Fixed

- The region free patch in v58 caused booting to fail on some consoles; this
    has been fixed. The issue was that a boot variable is in two different places
    depending on BIOS version. I had assumed the split was across v1.00/v1.01 in
    the original patch. This new version checks directly where the variable
    actually is, ignoring the version, so it should work on all systems.

# v58

## Fixed

- Corrected region free booting to work with BIOS 1.00. As region-free is now
    always enabled, the previous code would just hang after fading out and before
    the SEGA logo.

# v57

## Improved

- Support AR carts with an SST 29LE020 flash chip. Weirdly, this is a 3.3V
    chip, but still appears in some carts.

# v56

## Improved
