@@ -38,7 +38,7 @@ LDFLAGS += -L$(IAPETUS_LIBDIR) -L$(NEWLIB_LIBDIR) -Wl,--gc-sections
 VERSION ?= $(shell git describe --always --dirty --match aotsrintsoierats) $(shell date +%y%m%d%H%M%S)
 CFLAGS += -DVERSION='"$(VERSION)"'
 
-SRCS := init.c gui/fade.c satiator.c syscall.c jhloader.c main.c gui/gmenu.c gui/filelist.c clock.c disc_format/cdparse.c disc_format/cue2desc.c ar.c
+SRCS := init.c gui/fade.c satiator.c syscall.c jhloader.c main.c gui/gmenu.c gui/filelist.c clock.c disc_format/cdparse.c disc_format/cue2desc.c ar.c diagnostics.c
 
 ifeq ($(DEBUG), yes)
 	CFLAGS += -DDEBUG
