@@ -86,6 +86,7 @@ int s_mode(enum satiator_mode mode);
 int s_get_fw_version(char *buf, int buflen);
 int s_get_bootloader_version(uint32_t *version);
 int s_get_serial_number(uint32_t *serial);
+int s_get_sd_latency(uint16_t latency_us[1024], int *errors);
 
 // See if there is a cartridge in the top slot providing Satiator services
 satiator_cart_header_t *s_find_cartridge(void);
