@@ -1,3 +1,9 @@
+# v64
+
+## New features
+
+- Added a tools menu entry for diagnostic tools. Currently includes measuring SD card performance. Requires firmware 156.
+
 # v63
 
 ## New features
